Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for LedgerSMB 1.3.5
* Fixing Menu and Permissions bug 3430820 (Chris T)
* Fixing permissions bug 3433644 (Chris T)

Changelog for LedgerSMB 1.3.4
* Corrected case matching error in upgrade script (Chris T)
* Corrected version number on new databases (Chris T)
* Corrected multiple load errors on upgrade (David B)
* Corrected problem creating UTF-8 database on Debian (David B)
* Corrected display issues with numbers (Herman V)
* Updated Ubuntu notes (Frans S)
* Corrected a couple of menu items (David B)
* Added 1.3-1.2 downgrade script to recover from failed upgrades (Chris T)
* Corrected ship/receive bug due to invalid join conditions (Chris T)
* Corrected template error in printPayment.html (Herman V)
* Form.pl now provides instructions to use setup.pl to correct database
versioning errors (Chris T)

Chris T is Chris Travers
David B is David Bandel
Herman V is Herman Vierendeels

Changelog for LedgerSMB 1.3.3
* Fix for being unable to delete AR/AP drafts (Herman V)
* Additional button cleanup (Herman V)
* Fix for is_zero issue with latest Math::BigFloat in AR/AP trans (Chris T)
* Fix for inability to save employee country (Chris T)
* API inconsistency fixed (Chris T)
* Fix for translation string standardization (Herman V)
* Fix for AP posting issue with 1.000,00 number format (Herman V)
* More number format fixes (Herman V)
* Database upgrade within 1.3 now possible from setup.pl (Chris T)
* Corrected Norwegian tax rates (Erik H)

Chris T is Chris Travers
Herman V is Herman Vierendeels
Erik H is Erik Huelsman
Frans S is Frans van der Star

Changelog for LedgerSMB 1.3.2
* Fixed a few files where suExec fixes were not applied (Chris T)
* Fixed erroneous buttons marked "Save and Post" showing up (Chris T)
* Corrected test cases so they do not fail w/o optional LaTeX mods (Chris T)
* Made errors saving chart of accounts entry more friendly (Chris T)