@@ -5,6 +5,7 @@ Supported Presently
 Changelog for LedgerSMB 1.3.5
 * Fixing Menu and Permissions bug 3430820 (Chris T)
 * Fixing permissions bug 3433644 (Chris T)
+* Fixing file not found printing HTML invoice (Chris T)
 
 Changelog for LedgerSMB 1.3.4
 * Corrected case matching error in upgrade script (Chris T)
